<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">UzCoinWall</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="carete_a_wallet">create a wallet</string>
    <string name="login_button">Log in</string>
    <string name="create_account">create a wallet</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="privacy">Privacy and policy</string>
    <string name="login">Continue</string>
    <string name="wallet_id">Wallet ID</string>
    <string name="forgot_id">Can\'t remembar my wallet id</string>
    <string name="balances">BALANCES</string>
    <string name="uz_coin">UzCoin</string>
    <string name="uz_ether">Ether</string>
    <string name="coin_cash">Cash</string>
    <string name="price_charts">PRICE CHARTS</string>
    <string name="buy_coin">Buy Coin</string>
    <string name="sell_coin">Sell Coin</string>
    <string name="payment">Payment</string>
    <string name="details">Details</string>

    <!-- Navigation Drawer -->
    <string name="my_accout">My Account</string>
    <string name="membership">Membership</string>
    <string name="Deals">Deals</string>
    <string name="add_withdraw_funds">Add/Withdraw Funds</string>
    <string name="send_receive_btc">Send Receive BTC</string>
    <string name="settings">Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="log_out">Log Out</string>
    <string name="statistics">Statistics</string>
    <string name="contine"><![CDATA[Contine >>]]></string>
    <string name="continue">Continue</string>


</resources>
