<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="5dp"
    tools:context=".StartActivity">

    <LinearLayout
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher_round"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="20dp"
            android:textColor="@color/colorAccent"
            android:textSize="26sp"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_margin="10dp"
        android:background="@color/primary"
        android:textColor="@color/colorTextWhite"
        android:text="@string/carete_a_wallet"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/login_button"
        android:layout_margin="5dp"
        android:background="@color/primary_dark"
        android:textColor="@color/colorTextWhite"
        android:text="@string/login_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

</LinearLayout>