<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <include
        android:layout_gravity="top"
        android:id="@+id/login_toolbar"
        layout="@layout/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_wallet_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/login_toolbar"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        tools:ignore="MissingConstraints">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wallet_id" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/login_wallet_id"
        android:id="@+id/login_password"
        tools:ignore="MissingConstraints">

        <EditText
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/login_forgot_wallet_id"
        android:text="@string/forgot_id"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_below="@+id/login_forgot_wallet_id"
        tools:ignore="RtlCompat" />

    <Button
        android:layout_gravity="bottom"
        android:background="@color/primary_dark"
        android:textSize="16sp"
        android:textColor="@color/colorTextWhite"
        android:elevation="8dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        tools:targetApi="lollipop" />

</RelativeLayout>